2005-05-04  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-proc-def.[ch] (plug_in_proc_def_find): new
	function which finds a proc_def in a GSList by its procedure name.

	* app/plug-in/plug-in-message.c
	* app/plug-in/plug-ins.c
	* tools/pdbgen/pdb/plug_in.pdb: use it instead of iterating and
	comparing manually.

	* app/pdb/plug_in_cmds.c: regenerated.

	* app/plug-in/plug-in-def.c: minor cleanups.

2005-05-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpfgbgeditor.c (gimp_fg_bg_editor_button_press):
	emit "color-clicked" on first click.

	* app/widgets/gimptoolbox.c: changed tooltip accordingly.

2005-05-04  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-proc-def.[ch] (plug_in_proc_def_set_icon):
	new function.

	* tools/pdbgen/pdb/plug_in.pdb: removed the same code here and use
	the new function.

	* app/pdb/plug_in_cmds.c: regenerated.

2005-05-03  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolordisplayeditor.h: include the parent class,
	not gimpeditor.h

	* app/widgets/gimpcolordisplayeditor.c: include gimpeditor.h here

2005-05-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py (progress_update): special case
	percentage < 0 and pulse progress.

2005-04-30  Sven Neumann  <sven@gimp.org>

	* plug-ins/bmp/bmpread.c: applied a patch from David Costanzo that
	adds missing error handling to the BMP loader, allowing it to deal
	gracefully with incomplete BMP image files.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/winicon/icodialog.c
	* plug-ins/winicon/icosave.c: changed dialog layout.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/enumcode.pl: declared function array as const.

	* libgimp/gimpenums.c.tail: regenerated.

2005-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/gimpprojection-construct.c (gimp_projection_construct):
	use copy_region() instead of using tile_manager_map_over_tile()
	directly.

2005-04-29  Sven Neumann  <sven@gimp.org>
